--- a/packages/volto-relateditems-block/package.json
+++ b/packages/volto-relateditems-block/package.json
@@ -27,7 +27,8 @@
     "release-alpha": "release-it --preRelease=alpha"
   },
   "dependencies": {
-    "@plone/components": "1.7.0"
+    "@plone/components": "1.7.0",
+    "classnames": "2.2.6"
   },
   "peerDependencies": {
     "react": "18.2.0",
